# storage/api-docs/api-docs.json
@@ -1,13 +1,13 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "L5 OpenApi",
-        "description": "L5 Swagger OpenApi description",
+        "title": "Osama Almamari (779558800)",
+        "description": "Posts Api Documntion",
         "contact": {
-            "email": "darius@matulionis.lt"
+            "email": "osama.moh.almamari@gmail.com"
         },
         "license": {
-            "name": "Apache 2.0",
+            "name": "Post api 1.0",
             "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0.0",
